--- a/src/assets/tailwind/tailwind.css
+++ b/src/assets/tailwind/tailwind.css
@@ -1,5 +1,5 @@
 @import "./css/_colors.css";
-/* @import "./css/_typography.css"; */
+@import "./css/_typography.css";
 
 @layer utilities {
     .action-active {
