--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import ArticleHeroStage from '../modules/ArticleHeroStage.vue';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<ArticleHeroStage></ArticleHeroStage>
 	</main>
 </Layout>
 
