--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,5 +40,7 @@ const { title } = Astro.props;
     html,
     body {
         color: var(--text-neutral);
+        caret-color: var(--lime-neutral) !important;
+        caret-shape: block !important;
     }
 </style>
