--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import ArticleClaims from '../modules/ArticleClaims.vue';
-import ArticleHeroStage from '../modules/ArticleHeroStage.vue';
+import SectionIntro from '../sections/SectionIntro.vue'
+import SectionProblems from '../sections/SectionProblems.vue'
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<ArticleHeroStage client:idle></ArticleHeroStage>
-		<ArticleClaims client:idle></ArticleClaims>
+		<SectionIntro client:idle id="intro"></SectionIntro>
+		<SectionProblems client:idle id="problems"></SectionProblems>
 	</main>
 </Layout>
 
