another day another push

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,10 @@
 ---
-import "@fontsource/public-sans";
-import "@fontsource/gochi-hand";
+import "@fontsource/public-sans/300.css";
+import "@fontsource/public-sans/400.css";
+import "@fontsource/public-sans/500.css";
+import "@fontsource/public-sans/600.css";
+import "@fontsource/public-sans/700.css";
+import "@fontsource/gochi-hand/400.css";
 
 import TopNavigation from "../components/TopNavigation.vue";
 
