--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import SectionProblems from '../sections/SectionProblems.vue'
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<SectionIntro client:idle id="intro"></SectionIntro>
+		<SectionIntro class="z-10" client:idle id="intro"></SectionIntro>
 		<SectionProblems client:idle id="problems"></SectionProblems>
 	</main>
 </Layout>
