--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en" class="bg-surface-neutral">
+<html lang="de" class="bg-surface-neutral hyphens-auto">
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
