--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,5 +46,12 @@ const { title } = Astro.props;
         color: var(--text-neutral);
         caret-color: var(--lime-neutral) !important;
         caret-shape: block !important;
+
+        img {
+            user-drag: none;
+            user-select: none;
+            -webkit-user-drag: none;
+            -webkit-user-select: none;
+        }
     }
 </style>
